# blockchain-simulator

./: 01_blockchain_simulation.ipynb  02_blockchain_simulation_with_state.ipynb  README.md  pyproject.toml
blockchain_simulator/: graph_analysis.py  mlmc.py  node.py  simulation.py  visualization.py
data/: state_data.csv
notebooks/: demonstration.ipynb
notebooks/data/: discontinuities.csv  state_data.csv
tests/: test_graph_analysis.py  test_mlmc.py  test_node.py  test_simulation.py
