[tool.poetry]
name = "blockchain-simulator"
version = "0.1.0"
description = "An advanced blockchain network simulator for analyzing state space and network topology."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
homepage = "https://github.com/yourusername/Blockchain-Simulator"

[tool.poetry.dependencies]
python = "^3.13"
igraph = "^0.11.8"
simpy = "^4.1.1"
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
pycairo = "^1.27.0"
pytest = "^8.3.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"